--- a/gametest/package.json
+++ b/gametest/package.json
@@ -1,7 +1,7 @@
 {
     "name": "rmmz-game",
     "main": "index.html",
-    "chromium-args": "--force-color-profile=srgb",
+    "chromium-args": "--force-color-profile=srgb --disable-devtools",
     "window": {
         "title": "2/7/2022",
         "width": 816,
